tests/e2e/gateway-secret/00-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: ssg-secret-test
data:
  SSG_ADMIN_PASSWORD: N2xheWVy
  SSG_ADMIN_USERNAME: YWRtaW4=
  SSG_CLUSTER_PASSWORD: N2xheWVy
  SSG_DATABASE_PASSWORD: N2xheWVy
  SSG_DATABASE_USER: Z2F0ZXdheQ==
